# WBSFModels

./: .gitignore  CMakeLists.txt  README.md
src/ActiaInterrupta/: ActiaInterrupta.cpp  ActiaInterrupta.h  ActiaInterruptaEquations.cpp  ActiaInterruptaEquations.h  ActiaInterruptaModel.cpp  ActiaInterruptaModel.h  CMakeLists.txt
src/ActiaInterrupta_OBL_SBW/: ActiaInterrupta_OBL_SBW.cpp  ActiaInterrupta_OBL_SBW.h  ActiaInterrupta_OBL_SBW_Model.cpp  ActiaInterrupta_OBL_SBW_Model.h  CMakeLists.txt
src/Agriculture/: CMakeLists.txt  Insect Development Database II.cpp  Insect Development Database II.h  Insect Development Database III.cpp  Insect Development Database III.h  MagareyInfection.cpp  MagareyInfection.h
src/AprocerosLeucopoda/: ALeucopoda.cpp  ALeucopoda.h  ALeucopodaEquations.cpp  ALeucopodaEquations.h  ALeucopodaModel.cpp  ALeucopodaModel.h  CMakeLists.txt
src/Bagworm/: Bagworm.cpp  Bagworm.h  BagwormModel.cpp  BagwormModel.h  CMakeLists.txt
src/BiophysicalSiteIndices(Ecoloap)/: Biophysical Site Indices (Ecoloap).cpp  Biophysical Site Indices (Ecoloap).h  CMakeLists.txt
src/BudBurst/: BudBurst.cpp  BudBurst.h  BudBurstCharrier.cpp  BudBurstCharrier.h  BudBurstSBWHost.cpp  BudBurstSBWHost.h  BudBurstSBWHostModel.cpp  BudBurstSBWHostModel.h  BudBurstSaintAmant.cpp  BudBurstSaintAmant.h  BudBurstUlmus.cpp  BudBurstUlmus.h  CMakeLists.txt  PHENO_eqs.cpp  PHENO_eqs.h  ShootDevelopmentIndex.cpp  ShootDevelopmentIndex.h
src/Cankerworms/: CMakeLists.txt  FallCankerwormsModel.cpp  FallCankerwormsModel.h  SpringCankerwormsModel.cpp  SpringCankerwormsModel.h
src/Climatic/: ASCE-ETsz.cpp  ASCE-ETsz.h  AllenWaveModel.cpp  AllenWaveModel.h  BlueStainIndexModel.cpp  BlueStainIndexModel.h  BlueStainVariables.cpp  BlueStainVariables.h  BlueStainVariablesModel.cpp  BlueStainVariablesModel.h  CCBioModel.cpp  CCBioModel.h  CMIModel.cpp  CMIModel.h  CMakeLists.txt  CaroleCoursolle.cpp  CaroleCoursolle.h  ChillingDegreeDayModel.cpp  ChillingDegreeDayModel.h  Climatic.cpp  Climatic.h  ClimaticFromTPOnly.cpp  ClimaticFromTPOnly.h  ClimaticMoistureDeficit.cpp  ClimaticMoistureDeficit.h  ClimaticQc.cpp  ClimaticQc.h  ClimaticWind.cpp  ClimaticWind.h  ClimdexModel.cpp  ClimdexModel.h  ClimdexVariables.cpp  ClimdexVariables.h  CornHeatUnitsModel.cpp  CornHeatUnitsModel.h  Daily vs Hourly.cpp  Daily vs Hourly.h  Daily vs Normals model.cpp  Daily vs Normals model.h  Daily vs Normals.cpp  (+43 more)
src/EmeraldAshBorer/: CMakeLists.txt  EABIndividual.cpp  EABIndividual.h  EABIndividualEquations.cpp  EABIndividualEquations.h  EABIndividualModel.cpp  EABIndividualModel.h  EmeraldAshBorer.cpp  EmeraldAshBorer.h  EmeraldAshBorerColdHardiness.cpp  EmeraldAshBorerColdHardiness.h  TreeMicroClimate.cpp  TreeMicroClimate.h
src/Entomophaga_maimaiga/: CMakeLists.txt  DDEVF.cpp  EntomophagaMaimaigaModel.cpp  EntomophagaMaimaigaModel.h  ODE_Solver.cpp
src/FWI/: CMakeLists.txt  DroughtCodeModel.cpp  DroughtCodeModel.h  FBP-Model.cpp  FBP-Model.h  FBP.cpp  FBP.h  FWI(new from wang2015).cpp  FWI(new from wang2015).h  FWI-Model.cpp  FWI-Model.h  FWI.cpp  FWI.h  SummerMoisture.cpp  SummerMoisture.h  SummerMoistureModel.cpp  SummerMoistureModel.h
src/GypsyMoth/: CMakeLists.txt  EggModel.cpp  EggModel.h  GrayModel.cpp  GrayModel.h  GrayModelold.cpp  GypsyMoth.cpp  GypsyMoth.h  GypsyMothCommon.cpp  GypsyMothCommon.h  GypsyMothModel.cpp  GypsyMothModel.h  GypsyMothStab.cpp  GypsyMothStab.h  JohnsonModel.cpp  JohnsonModel.h  LyonsModel.cpp  LyonsModel.h  SawyerModel.cpp  SawyerModel.h  resource.h
src/HemlockLooper/: CMakeLists.txt  HemlockLooper.cpp  HemlockLooper.h  HemlockLooperEquations.cpp  HemlockLooperEquations.h  HemlockLooperModel.cpp  HemlockLooperModel.h
src/HemlockWoollyAdelgid/: CMakeLists.txt  HWAPhenology.cpp  HWAPhenology.h  HemlockWoollyAdelgid.cpp  HemlockWoollyAdelgid.h
src/IPSTypographus/: CMakeLists.txt  SBBColdTolerance.cpp  SBBColdTolerance.h  SBBDevelopment.cpp  SBBDevelopment.h  SBBEquations.cpp  SBBEquations.h  SBBModel.cpp  SBBModel.h  SpruceBarkBeetle.cpp  SpruceBarkBeetle.h  SpruceBarkBeetleLiteratureModel.cpp  SpruceBarkBeetleLiteratureModel.h  SpruceBarkBeetleOhrn.cpp  SpruceBarkBeetleOhrn.h
src/LaricobiusOsakensis/: CMakeLists.txt  LaricobiusOsakensis.cpp  LaricobiusOsakensis.h  LaricobiusOsakensisEquations.cpp  LaricobiusOsakensisEquations.h  LaricobiusOsakensisModel.cpp  LaricobiusOsakensisModel.h
src/MPB/: CMakeLists.txt  ClimaticMPB.cpp  ClimaticMPB.h  DevelopementVector.cpp  DevelopementVector.h  Generations.cpp  Generations.h  MPBColdTolerance.cpp  MPBColdTolerance.h  MPBDevRates.cpp  MPBDevRates.h
src/MeteorusTrachynotus/: CMakeLists.txt  MeteorusTrachynotus.cpp  MeteorusTrachynotus.h  MeteorusTrachynotusEquations.cpp  MeteorusTrachynotusEquations.h  MeteorusTrachynotusModel.cpp  MeteorusTrachynotusModel.h
src/MeteorusTrachynotus_OBL_SBW/: CMakeLists.txt  MeteorusTrachynotus_OBL_SBW.cpp  MeteorusTrachynotus_OBL_SBW.h  MeteorusTrachynotus_OBL_SBW_Model.cpp  MeteorusTrachynotus_OBL_SBW_Model.h
src/ObliqueBandedLeafroller/: CMakeLists.txt  ObliqueBandedLeafroller.cpp  ObliqueBandedLeafroller.h  ObliqueBandedLeafrollerEquations.cpp  ObliqueBandedLeafrollerEquations.h  ObliqueBandedLeafrollerModel.cpp  ObliqueBandedLeafrollerModel.h
src/SiteIndexClimate/: CMakeLists.txt  SiteIndexClimate.cpp  SiteIndexClimate.h
src/SoilMoistureIndex/: CMakeLists.txt  SMIModel.cpp  SMIModel.h  SMI_QLModel.cpp  SMI_QLModel.h
src/Solar/: CMakeLists.txt  SolarModel.cpp  SolarModel.h
src/SpruceBudworm/: CMakeLists.txt  SBW-Eldon-Model.cpp  SBW-Eldon-Model.h  SBW-Lysyk-Model.cpp  SBW-Lysyk-Model.h  SBWManitobaModel.cpp  SBWManitobaModel.h  SpruceBudworm.cpp  SpruceBudworm.h  SpruceBudwormDispersal.cpp  SpruceBudwormDispersal.h  SpruceBudwormEquations.cpp  SpruceBudwormEquations.h  SpruceBudwormLaboratory.cpp  SpruceBudwormLaboratory.h  SpruceBudwormLaboratoryEquations.cpp  SpruceBudwormLaboratoryEquations.h  SpruceBudwormModel.cpp  SpruceBudwormModel.h
src/StandardizedPrecipitationEvapotranspirationIndex/: CMakeLists.txt  SPEIModel.cpp  SPEIModel.h
src/Tranosema/: CMakeLists.txt  (+6 more)
(+161 files in other folders)
