cmake_minimum_required(VERSION 3.25)
project(WBSFModels LANGUAGES CXX)

add_subdirectory(src/ActiaInterrupta)
add_subdirectory("src/BiophysicalSiteIndices(Ecoloap)")
add_subdirectory(src/Climatic)
add_subdirectory(src/MPB)
add_subdirectory(src/SiteIndexClimate)
add_subdirectory(src/SoilMoistureIndex)
add_subdirectory(src/StandardizedPrecipitationEvapotranspirationIndex)
add_subdirectory(src/WaterBalance)

if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
  set_property(GLOBAL PROPERTY USE_FOLDERS ON)
  set_target_properties(ActiaInterruptaLib PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(ActiaInterruptaBiology PROPERTIES FOLDER "WBSFModels/Phenology")

  set_target_properties(ClimaticLib PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(AllenWave PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(ASCE-ETc PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(ASCE-ETsz PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(BiophysicalSiteIndicesEcoloap PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(BlueStainVariables PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(CaroleCoursolle PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(ChillingDegreeDay PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(ClimateMoistureIndex PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(CCBio PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(Climatic PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(ClimaticMoistureDeficit PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(ClimaticMPB PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(ClimaticQc PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(ClimaticWind PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(Climdex PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(CornHeatUnits PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(DailyVsHourly PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(DailyVsNormals PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(DegreeDay PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(DegreeHour PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(DewPeriod PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(GrowingSeason PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(HourlyGenerator PROPERTIES FOLDER "WBSFModels/Climatic")    
  set_target_properties(PotentialEvapotranspiration PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(ReverseDegreeDay PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(SiteIndexClimate PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(SnowMelt PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(SoilMoistureIndex PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(SoilMoistureIndexQL PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(SoilTemperature PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(SpringFrost PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(StandardizedPrecipitationEvapotranspirationIndex PROPERTIES FOLDER "WBSFModels/Climatic")  
  set_target_properties(TminTairTmax PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(UnderbarkTemperature PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(VaporPressureDeficit PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(VHR_to_Landsat PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(WaterBalance PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(WetnessDuration PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(WinterThaw PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(WorldClimVars PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(PotentialEvapotranspiration PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(PotentialEvapotranspiration PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(PotentialEvapotranspiration PROPERTIES FOLDER "WBSFModels/Climatic")
endif()