cmake_minimum_required(VERSION 3.25)
project(WBSFModels LANGUAGES CXX)

add_subdirectory(src/ActiaInterrupta)
add_subdirectory(src/ActiaInterrupta_OBL_SBW)
add_subdirectory(src/AprocerosLeucopoda)
add_subdirectory(src/Bagworm)
add_subdirectory(src/BudBurst)
add_subdirectory(src/EmeraldAshBorer)
add_subdirectory(src/Entomophaga_maimaiga)
add_subdirectory(src/EuropeanElmScale)
add_subdirectory(src/Cankerworms)
add_subdirectory(src/ForestTentCaterpillar)
add_subdirectory(src/GypsyMoth)
add_subdirectory(src/HemlockLooper)
add_subdirectory(src/HemlockWoollyAdelgid)
add_subdirectory(src/JackpineBudworm)
add_subdirectory(src/LaricobiusNigrinus)
add_subdirectory(src/LaricobiusOsakensis)
add_subdirectory(src/LeafAreaIndex)
add_subdirectory(src/LeucotaraxisArgenticollis)
add_subdirectory(src/LeucotaraxisPiniperda)
add_subdirectory("src/Leucotaraxis spp")
add_subdirectory("src/BiophysicalSiteIndices(Ecoloap)")
add_subdirectory(src/ObliqueBandedLeafroller)
add_subdirectory(src/SPBInfestationIndex)
add_subdirectory(src/SpottedLanternfly)
add_subdirectory(src/IPSTypographus)
add_subdirectory(src/SpruceBeetle)
add_subdirectory(src/SpruceBudworm)
add_subdirectory(src/MeteorusTrachynotus)
add_subdirectory(src/MeteorusTrachynotus_OBL_SBW)
add_subdirectory(src/Tranosema)
add_subdirectory(src/Tranosema_OBL_SBW)
add_subdirectory(src/WesternSpruceBudworm)
add_subdirectory(src/WhitemarkedTussockMoth)
add_subdirectory(src/WhitePineWeevil)
add_subdirectory(src/YellowheadedSpruceSawfly)
add_subdirectory(src/Climatic)
add_subdirectory(src/MPB)
add_subdirectory(src/SiteIndexClimate)
add_subdirectory(src/SoilMoistureIndex)
add_subdirectory(src/StandardizedPrecipitationEvapotranspirationIndex)
add_subdirectory(src/WaterBalance)
add_subdirectory(src/Agriculture)
add_subdirectory(src/FWI)
add_subdirectory(src/PlantHardiness)
add_subdirectory(src/Solar)

if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
  set_property(GLOBAL PROPERTY USE_FOLDERS ON)
  set_target_properties(ActiaInterruptaLib PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(ActiaInterruptaBiology PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(ActiaInterrupta_OBL_SBW PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(AprocerosLeucopoda PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(Bagworm PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(BudBurst PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(BudBurstSaintAmant PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(BudBurstSBWHost PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(BudBurstUlmus PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(ShootDevelopmentIndex PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(EmeraldAshBorer PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(EmeraldAshBorerColdHardiness PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(EntomophagaMaimaiga PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(EuropeanElmScale PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(FallCankerworms PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(SpringCankerworms PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(ForestTentCaterpillar PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(GypsyMothLib PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(GypsyMothSeasonality PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(GypsyMothStability PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(HemlockLooper PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(HemlockWoollyAdelgidColdTolerance PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(HemlockWoollyAdelgidPhenology PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(JackpineBudworm PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(LaricobiusNigrinus PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(LaricobiusOsakensis PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(LeafAreaIndex PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(LeucotaraxisArgenticollis PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(LeucotaraxisPiniperda PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(LeucotaraxisSpp PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(ObliqueBandedLeafrollerLib PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(ObliqueBandedLeafroller PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(SpruceBudwormLib PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(SpruceBudwormBiology PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(SpruceBudwormDispersal PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(SpruceBudwormLaboratory PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(SpruceBudwormEldon PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(SpruceBudwormLysyk PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(SpruceBudwormManitoba PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(MeteorusTrachynotusLib PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(MeteorusTrachynotusBiology PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(MeteorusTrachynotus_OBL_SBW PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(MPBLib PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(MPB-ColdTolerance PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(MPB-iModel PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(MPB-SLR PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(SouthernPineBeetleInfestationIndex PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(SpottedLanternfly PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(SpruceBarkBeetleLiterature PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(SpruceBeetle PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(TranosemaLib PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(TranosemaBiology PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(Tranosema_OBL_SBW PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(WesternSpruceBudworm PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(WhitemarkedTussockMoth PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(WhitePineWeevil PROPERTIES FOLDER "WBSFModels/Phenology")
  set_target_properties(YellowheadedSpruceSawfly PROPERTIES FOLDER "WBSFModels/Phenology")

  set_target_properties(ClimaticLib PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(AllenWave PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(ASCE-ETc PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(ASCE-ETsz PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(BiophysicalSiteIndicesEcoloap PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(BlueStainVariables PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(CaroleCoursolle PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(ChillingDegreeDay PROPERTIES FOLDER "WBSFModels/Climatic")  
  set_target_properties(CCBio PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(ClimateMoistureIndex PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(Climatic PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(ClimaticMoistureDeficit PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(ClimaticMPB PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(ClimaticQc PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(ClimaticWind PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(Climdex PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(CornHeatUnits PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(DailyVsHourly PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(DailyVsNormals PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(DegreeDay PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(DegreeHour PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(DewPeriod PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(GrowingSeason PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(HourlyGenerator PROPERTIES FOLDER "WBSFModels/Climatic")    
  set_target_properties(PotentialEvapotranspiration PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(ReverseDegreeDay PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(SiteIndexClimate PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(SnowMelt PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(SoilMoistureIndex PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(SoilMoistureIndexQL PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(SoilTemperature PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(SpringFrost PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(StandardizedPrecipitationEvapotranspirationIndex PROPERTIES FOLDER "WBSFModels/Climatic")  
  set_target_properties(TminTairTmax PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(UnderbarkTemperature PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(VaporPressureDeficit PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(VHR_to_Landsat PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(WaterBalance PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(WetnessDuration PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(WinterThaw PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(WorldClimVars PROPERTIES FOLDER "WBSFModels/Climatic")
  set_target_properties(PotentialEvapotranspiration PROPERTIES FOLDER "WBSFModels/Climatic")
  
  set_target_properties(InsectDevelopmentDatabaseII PROPERTIES FOLDER "WBSFModels/Agriculture")
  set_target_properties(InsectDevelopmentDatabaseIII PROPERTIES FOLDER "WBSFModels/Agriculture")
  set_target_properties(MagareyInfection PROPERTIES FOLDER "WBSFModels/Agriculture")

  set_target_properties(FWILib PROPERTIES FOLDER "WBSFModels/Fire")
  set_target_properties(FBP PROPERTIES FOLDER "WBSFModels/Fire")
  set_target_properties(FWI PROPERTIES FOLDER "WBSFModels/Fire")
  set_target_properties(FWIDroughtCode PROPERTIES FOLDER "WBSFModels/Fire")
  set_target_properties(SummerMoisture PROPERTIES FOLDER "WBSFModels/Fire")

  set_target_properties(BlueStainIndex PROPERTIES FOLDER "WBSFModels/Other")
  set_target_properties(PlantHardiness PROPERTIES FOLDER "WBSFModels/Other")
  set_target_properties(Solar PROPERTIES FOLDER "WBSFModels/Other")
endif()